gen/26.1/rpk/rpk-redpanda-admin-config-log-level-set.adoc
= rpk redpanda admin config log-level set
:description: rpk redpanda admin config log-level set

Set broker logger's log level.

This command temporarily changes a broker logger's log level. Each Redpanda
broker has many loggers, and each can be individually changed. Any change
to a logger persists for a limited amount of time, so as to ensure you do
not accidentally enable debug logging permanently.

It is optional to specify a logger; if you do not, this command will prompt
from the set of available loggers.

The special logger "all" enables all loggers. Alternatively, you can specify
many loggers at once.

This command accepts loggers that it does not know of to ensure you can
independently update your redpanda installations from rpk. The success or
failure of enabling each logger is individually printed.

You can use --help-loggers to display available loggers:

  rpk redpanda admin config log-level set --help-loggers [--host <HOST>]

== Usage

[,bash]
----
rpk redpanda admin config log-level set [LOGGERS...] [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-e, --expiry-seconds |int |Seconds to persist this log level override before redpanda reverts to its previous settings (if 0, persist until shutdown) (default 300).

|-h, --help |- |Help for set.

|--help-loggers |- |Display the list of available loggers.

|--host |string |Either a hostname or an index into rpk.admin_api.addresses config section to select the hosts to issue the request to.

|-l, --level |string |Log level to set (error, warn, info, debug, trace) (default "debug").

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--ignore-profile |- |Ignore rpk.yaml and redpanda.yaml; use default settings.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===